# apimodel/refresh_request.go
@@ -1,0 +1,64 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package apimodel
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// RefreshRequest refresh request
+// swagger:model RefreshRequest
+type RefreshRequest struct {
+
+	// refresh token
+	// Required: true
+	RefreshToken string `json:"refreshToken"`
+}
+
+// Validate validates this refresh request
+func (m *RefreshRequest) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateRefreshToken(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *RefreshRequest) validateRefreshToken(formats strfmt.Registry) error {
+
+	if err := validate.RequiredString("refreshToken", "body", string(m.RefreshToken)); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *RefreshRequest) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *RefreshRequest) UnmarshalBinary(b []byte) error {
+	var res RefreshRequest
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
