# restapi/v1/api.go
@@ -6,6 +6,7 @@ import (
 	belloerr "github.com/adasiunas/bello-auth/error"
 	"github.com/adasiunas/bello-auth/restapi/operations/user"
 	"github.com/go-openapi/runtime/middleware"
+	"github.com/satori/go.uuid"
 )
 
 // /v1/user [POST]
@@ -34,6 +35,28 @@ func LoginUser(f *business.Factory) func(params user.LoginUserParams) middleware
 			}
 
 			return user.NewLoginUserInternalServerError().WithPayload(&apimodel.ErrorResponse{Message: err.Error(), Type: apimodel.ErrorResponseMessageInternalServerError})
+		}
+
+		return user.NewRegisterUserV1OK().WithPayload(&apimodel.TokenResponse{AccessToken: token.AccessToken, RefreshToken: token.RefreshToken})
+	}
+}
+
+// /v1/user/refresh
+func RefreshUserToken(f *business.Factory) func(params user.RefreshAccessTokenParams) middleware.Responder {
+	return func(params user.RefreshAccessTokenParams) middleware.Responder {
+		claims, err := business.ValidateRefreshToken(params.Token.RefreshToken)
+		if err != nil {
+			return user.NewRefreshAccessTokenBadRequest().WithPayload(&apimodel.ErrorResponse{Message: err.Error(), Type: apimodel.ErrorResponseMessageBadRequest})
+		}
+
+		userID, err := uuid.FromString(claims["sub"].(string))
+		if err != nil {
+			return user.NewRefreshAccessTokenBadRequest().WithPayload(&apimodel.ErrorResponse{Message: "invalid refresh token", Type: apimodel.ErrorResponseMessageUnauthorized})
+		}
+
+		token, err := business.RefreshTokens(f.DB(), userID)
+		if err != nil {
+			return user.NewRefreshAccessTokenBadRequest().WithPayload(&apimodel.ErrorResponse{Message: err.Error(), Type: apimodel.ErrorResponseMessageUnauthorized})
 		}
 
 		return user.NewRegisterUserV1OK().WithPayload(&apimodel.TokenResponse{AccessToken: token.AccessToken, RefreshToken: token.RefreshToken})
