# swagger.json
@@ -133,6 +133,44 @@
         }
       }
     },
+    "/v1/user/refresh": {
+      "post": {
+        "description": "Refresh access token",
+        "tags": [
+          "User"
+        ],
+        "operationId": "refreshAccessToken",
+        "parameters": [
+          {
+            "name": "Token",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/RefreshRequest"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User's token was successfully refreshed",
+            "schema": {
+              "$ref": "#/definitions/TokenResponse"
+            }
+          },
+          "400": {
+            "description": "Bad request payload",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
+          },
+          "500": {
+            "description": "Service down",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
+          }
+        }
+      }
+    },
     "/v1/resource": {
       "get": {
         "description": "Test auth resource",
@@ -228,6 +266,18 @@
           "x-nullable": false
         },
         "password": {
+          "type": "string",
+          "x-nullable": false
+        }
+      }
+    },
+    "RefreshRequest": {
+      "type": "object",
+      "required": [
+        "refreshToken"
+      ],
+      "properties": {
+        "refreshToken": {
           "type": "string",
           "x-nullable": false
         }
